# orthogonal-insight-toolkit

./: .gitignore  AGENT_PROMPTS.md  CLAUDE.md  EXAMPLES.md  EXPERIMENT_TEMPLATE.md  README.md  SEED_WORDS.md  pyproject.toml
.claude/commands/: seed.md  simulate.md
alien_insight/: __init__.py  prompts.py  run.py  seed.py
