[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orthogonal-insight"
version = "0.1.0"
description = "Generate non-obvious solutions by changing the physics of your problem"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Henrik Westerberg"}
]
keywords = ["ai", "creativity", "problem-solving", "simulation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
api = ["anthropic>=0.18.0"]

[project.scripts]
oip-seed = "insight_mining.seed:main"
oip-run = "insight_mining.run:main"

[project.urls]
Homepage = "https://github.com/emergent-wisdom/orthogonal-insight-toolkit"
